--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.js"
     integrity="sha512-8Z5++K1rB3U+USaLKG6oO8uWWBhdYsM3hmdirnOEWp8h2B1aOikj5zBzlXs8QOrvY9OxEnD2QDkbSKKpfqcIWw=="
     crossorigin="anonymous"></script>
-  <script src="main.js" type="text/javascript"></script>
+  <script src="main.js"></script>
   <link rel="stylesheet" href="layout.css">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -48,7 +48,7 @@
 
     <div class="categories">
       <p class="title">Tomorrow's Schedule</p>
-      <div class="schedule-bar transparent-mask">
+      <div class="flex schedule-bar transparent-mask">
       </div>
     </div>
 
